--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,39 @@
 {
-    "name": ":vendor_slug/:package_slug",
+    "name": "ravols/lara-logs-notifier",
     "description": ":package_description",
     "keywords": [
-        ":vendor_name",
-        ":package_slug"
+        "ravols",
+        "lara-logs-notifier"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/ravols/lara-logs-notifier",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Jaroslav Stefanec",
+            "email": "jaroslav.stefanec@naucma.sk",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.4"
+        "php": "^8.2"
     },
     "require-dev": {
-        :require_dev_testing,
-        :require_dev_codestyle,
         "spatie/ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "Slovar\\LaraLogsToolkit\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Slovar\\LaraLogsToolkit\\Tests\\": "tests"
         }
     },
-    "scripts": {
-        :scripts_testing,
-        :scripts_codestyle
-    },
+    "scripts": {},
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            :plugins_testing,
             "phpstan/extension-installer": true
         }
     },
