--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         }
     ],
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "illuminate/console": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
         "spatie/ray": "^1.28"
@@ -30,7 +32,16 @@
             "Slovar\\LaraLogsToolkit\\Tests\\": "tests"
         }
     },
-    "scripts": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Slovar\\LaraLogsToolkit\\LaraLogsToolkitServiceProvider"
+            ],
+            "aliases": {
+                "LaraLogsToolkit": "Slovar\\LaraLogsToolkit\\Facades\\LaraLogsToolkit"
+            }
+        }
+    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
