Refactors and enhances log analysis capabilities
Introduces log analysis comparison with caching to detect changes in log counts over time.

Adds DTOs for log counts and comparison data to provide type-safe access to log analysis data.

Updates commands and configuration for improved usability.

--- a/composer.json
+++ b/composer.json
@@ -24,21 +24,21 @@
     },
     "autoload": {
         "psr-4": {
-            "Slovar\\LaraLogsToolkit\\": "src"
+            "Ravols\\LaraLogsToolkit\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Slovar\\LaraLogsToolkit\\Tests\\": "tests"
+            "Ravols\\LaraLogsToolkit\\Tests\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Slovar\\LaraLogsToolkit\\LaraLogsToolkitServiceProvider"
+                "Ravols\\LaraLogsToolkit\\LaraLogsToolkitServiceProvider"
             ],
             "aliases": {
-                "LaraLogsToolkit": "Slovar\\LaraLogsToolkit\\Facades\\LaraLogsToolkit"
+                "LaraLogsToolkit": "Ravols\\LaraLogsToolkit\\Facades\\LaraLogsToolkit"
             }
         }
     },
