--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "pestphp/pest": "^3.0.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "symfony/var-dumper": "^7.3.2"
     },
     "autoload": {
