--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
     "autoload": {
         "psr-4": {
             "Ravols\\LaraLogsToolkit\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
